Committing Add AlternativeOptions